--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "nest-api",
-  "version": "0.0.1",
-  "description": "The main Nest API for node (also see: nest-thermostat and nest-protect)",
-  "main": "./lib/nest-api.js",
+  "version": "0.0.4",
+  "description": "The main Nest API for node (also see: nest-thermostat-api and nest-protect-api)",
+  "main": "./lib/nest-api",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul test --report html --hook-run-in-context ./node_modules/.bin/_mocha",
-    "test-travis": "./node_modules/.bin/istanbul cover --hook-run-in-context ./node_modules/.bin/_mocha -- -R spec;A=$?;cat coverage/lcov.info | ./node_modules/.bin/coveralls;exit $A"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -18,17 +17,16 @@
     "url": "https://github.com/johnwyles/node-nest-api/issues"
   },
   "homepage": "https://github.com/johnwyles/node-nest-api",
+  "dependencies": {
+    "coffee-script": "~1.7"
+  },
   "devDependencies": {
-    "coffee-script": "~1",
-    "mocha": "*",
-    "chai": "*",
-    "istanbul": "*",
-    "gulp": "~3",
-    "coveralls": "~2",
-    "gulp-watch": "~0",
-    "gulp-coffee": "~1.2.2",
-    "coffee-loader": "~0",
-    "gulp-mocha": "~0.4.1"
+    "coffee-script": "1.6.x",
+    "mversion": "0.3.x",
+    "chai": "1.8.x",
+    "mocha": "1.17.x",
+    "istanbul": "0.2.x",
+    "coveralls": "2.6.x"
   },
   "keywords": [
     "nest",
