Updating with some placeholder coffeescript from https://github.com/fiveisprime/nest-nodejs for now

--- a/.gitignore
+++ b/.gitignore
@@ -62,13 +62,13 @@ pids
 results
 
 # Node stuff #
-###########
+##############
 npm-debug.log
 node_modules
 coverage
 
 # Personal #
-##########
-
-
+############
+lib/test.js
 .coveralls.yml
+
