--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "The main Nest API for node (also see: nest-thermostat-api and nest-protect-api)",
   "main": "./lib/nest-api",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "test.coverage": "make test.coverage",
+    "test.coverage.preview": "make test.coverage.preview",
+    "test.coverage.coveralls": "make test.coverage.coveralls"
   },
   "repository": {
     "type": "git",
@@ -18,27 +21,35 @@
   },
   "homepage": "https://github.com/johnwyles/node-nest-api",
   "dependencies": {
-    "coffee-script": "~1.7"
+    "coffee-script": ""
   },
   "devDependencies": {
-    "coffee-script": "1.6.x",
-    "mversion": "0.3.x",
-    "chai": "1.8.x",
-    "mocha": "1.17.x",
-    "istanbul": "0.2.x",
-    "coveralls": "2.6.x"
+    "chai": "",
+    "coffee-script": "",
+    "coveralls": "",
+    "istanbul": "",
+    "gulp": "",
+    "gulp-coffee": "",
+    "gulp-coffeelint": "",
+    "gulp-mocha": "",
+    "gulp-plumber": "",
+    "gulp-watch": "",
+    "mocha": "",
+    "mversion": "",
+    "nock": "",
+    "through2": ""
   },
   "keywords": [
-    "nest",
     "api",
+    "coffeescript",
+    "nest",
     "node",
     "node.js",
-    "coffeescript",
-    "thermostat",
-    "protect"
+    "protect",
+    "thermostat"
   ],
   "engines": {
-    "node": ">=0.9",
-    "npm": ">=1.2.10"
+    "node": ">= 0.9",
+    "npm": ">= 1.2.10"
   }
 }
